--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "start": "nodemon server.js"   
+    "start": "nodemon server.js",
+    "build": "cd client && yarn install && yarn build"  
   }
 }
